force-app/main/default/objects/Appointment__c/fields/Is_Covid_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Is_Covid_Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Covid Vaccinated?</label>
    <type>Checkbox</type>
</CustomField>