force-app/main/default/objects/Appointment__c/fields/Next_appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_appointment_Date__c</fullName>
    <formula>DATEVALUE( Appointment_Date_Time__c ) + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next appointment Date</label>
    <type>Date</type>
</CustomField>