force-app/main/default/objects/Appointment__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <label>Patient Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>