force-app/main/default/objects/Appointment__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>