force-app/main/default/objects/Appointment__c/fields/Patient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Full_Name__c</fullName>
    <formula>Patient_First_Name__c  &amp; &quot; &quot;  &amp;  Patient_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Full Name</label>
    <type>Text</type>
</CustomField>