force-app/main/default/objects/Appointment__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midwest US</fullName>
            </value>
            <value>
                <fullName>Northeast US</fullName>
            </value>
            <value>
                <fullName>Northern Canada</fullName>
            </value>
            <value>
                <fullName>Central Canada</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>